fix visibiluty of starter dropdopdown & fix animate-from-bottom for long dropdown woth scrolls

--- a/src/style/frontend/menu.scss
+++ b/src/style/frontend/menu.scss
@@ -274,16 +274,20 @@ NAVBAR GENERAL STYLES
 /* bugfix: For sub-submenus that climb out of the right side of the screen and, on some WP Themes, they call the horizontal scroll of the browser when opening the first level submenu. */
 .gm-navbar {
   .gm-navbar-nav > .gm-dropdown:not(.gm-opened-before) .gm-dropdown-menu-wrapper {
-    display: none;
+    display: block;
+    visibility: hidden;
   }
   .gm-navbar-nav > .gm-dropdown:hover .gm-dropdown-menu-wrapper {
     display: block;
+    visibility: visible;
   }
   .gm-navbar-nav > .gm-dropdown .gm-dropdown-menu .gm-dropdown-submenu:not(.gm-opened-before) .gm-dropdown-menu-wrapper {
-    display: none;
+    display: block;
+    visibility: hidden;
   }
   .gm-navbar-nav > .gm-dropdown .gm-dropdown-menu .gm-dropdown-submenu:hover > .gm-dropdown-menu-wrapper {
     display: block;
+    visibility: visible;
   }
 }
 
